# rppal-pifacedigital

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: blink-fast-slow-async.rs  blink-fast-slow.rs  spi-speed-test.rs
src/: async-interrupts.md  lib.rs  sync-interrupts.md
