[package]
name = "rppal-pfd"
version = "0.0.5"
authors = ["Mike Walmsley"]
description = """PiFace Digital driver

An experimental driver for the PiFace Digital I/O expander for the 
Raspberry Pi. Requires RPPAL for the GPIO and SPI interfaces.
"""
license = "MIT"
readme = "README.md"
homepage = "https://docs.rs/rppal-pfd/"
repository = "https://github.com/solimike/rppal-pifacedigital/"
keywords = ["PiFaceDigital", "Raspberry", "Raspberry_Pi", "MCP23S17", "RPPAL"]
categories = ["hardware-support", "embedded"]
edition = "2021"

# Use the V2 resolver to avoid inappropriate merging of features.
resolver = "2"

[dependencies]
log = "0.4.17"
rppal-mcp23s17 = "0.0"
rppal = "0.14.0"
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.66"
env_logger = "0.9.3"
rppal-mcp23s17 = { version = "0.0", features = ["mockspi"] }

[features]

# Use of this feature causes the crate to use a mock version of the interface to the 
# SPI which is suited to running tests without needing the target Raspberry Pi
# hardware. Also requires the rppal_mcp23s17 crate to support the mock SPI.
mockspi = ["rppal-mcp23s17/mockspi"]
