[package]
name = "rppal-pfd"
version = "0.1.0"
authors = ["Mike Walmsley"]
description = """PiFace Digital driver

An experimental driver for the PiFace Digital I/O expander for the 
Raspberry Pi. Requires RPPAL for the GPIO and SPI interfaces.
"""
license = "MIT"
readme = "README.md"
homepage = "https://docs.rs/rppal-pfd/"
repository = "https://github.com/solimike/rppal-pifacedigital/"
keywords = ["PiFaceDigital", "Raspberry", "Raspberry_Pi", "MCP23S17", "RPPAL"]
categories = ["hardware-support", "embedded"]
edition = "2024"
rust-version = "1.85"

# Use the V2 resolver to avoid inappropriate merging of features.
resolver = "2"

[dependencies]
log = "0.4.27"
rppal-mcp23s17 = "0.1"
rppal = "0.22.1"
thiserror = "2.0.16"

[dev-dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
rppal-mcp23s17 = { features = ["mockspi"], version = "0.1" }

[features]

# Use of this feature causes the crate to use a mock version of the interface to the 
# SPI which is suited to running tests without needing the target Raspberry Pi
# hardware. Also requires the rppal_mcp23s17 crate to support the mock SPI.
mockspi = ["rppal-mcp23s17/mockspi"]

# Uncomment when testing against a locally modified version of the MCP23S17 dependency.
[patch.crates-io]
# rppal-mcp23s17 = { path = "../rppal-mcp23s17" }
